# onenote-dump

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
onenote-dump/: __main__.py  convert.py  log.py  main.py  onenote.py  onenote_auth.py  pipeline.py
onenote_dump/: __main__.py  convert.py  log.py  pipeline.py
test/: content.html  convert_test.py  headings.html  page.json  paragraphs.html
