[tool.poetry]
name = "onenote-dump"
version = "0.1.0"
description = "A utility for converting a Microsoft OneNote notebook to markdown."
authors = ["Eric Smith <eric@esmithy.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
requests-oauthlib = "^1.3.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[tool.poetry.scripts]
onenote-dump = "onenote_dump.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(  # Exclude directories:
    \.git
    | \.venv
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
